test/types/sync/ferguson/sync-complex.good
sync-complex.chpl:1: error: sync/single types cannot contain type 'complex(128)'
