test/types/sync/ferguson/sync-complex.chpl
var x: sync complex;
x.writeEF(1.0 + 3.0i);
